--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
   </head>
   <body>
     <header class="header">
-      <div class="container navbar">
-        <div class="logo"><img src="./assets/images/logo/Logo.svg" /></div>
-        <nav>
-          <a href="#"><p class="active">Home</p></a>
-          <a href="#"><p>Our Screens</p></a>
-          <a href="#"><p>Schedule</p></a>
-          <a href="#"><p>Movie Library</p></a>
-          <a href="#"><p>Location & Contact</p></a>
-          <a href="#"
-            ><img src="./assets/images/icons/burger_menu.svg" alt=""
-          /></a>
-        </nav>
+      <div class="navbar-top">
+        <div class="navbar max-screen-width">
+          <div class="logo"><img src="./assets/images/logo/Logo.svg" /></div>
+          <nav>
+            <a href="#"><p class="active">Home</p></a>
+            <a href="#"><p>Our Screens</p></a>
+            <a href="#"><p>Schedule</p></a>
+            <a href="#"><p>Movie Library</p></a>
+            <a href="#"><p>Location & Contact</p></a>
+            <a href="#"
+              ><img src="./assets/images/icons/burger_menu.svg" alt=""
+            /></a>
+          </nav>
+        </div>
       </div>
     </header>
     <main>
@@ -29,7 +31,7 @@
       </div>
       <!-- Intro Section -->
       <div class="intro-holder">
-        <div class="intro">
+        <div class="max-screen-width intro">
           <p class="intro-title">Movie Library</p>
           <p class="intro-desc">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
@@ -41,65 +43,70 @@
 
       <!-- Movies Section -->
       <div class="movies-holder">
-        <div class="movies-topbar">
-          <p class="topbar-title">Collect your favorites</p>
-          <div class="search-box">
-            <img
-              src="./assets/images/icons/search.svg"
-              alt=""
-              class="search-icon"
-            />
-            <div class="search-bar">
-              <form action="">
-                <input type="text" placeholder="Search title and add to grid" />
-              </form>
-            </div>
-          </div>
-        </div>
-        <div class="movies-card-holder">
-          <div class="movies-card">
-            <div class="movies-image-holder">
-              <img src="./assets/images/movies/1.png" alt="" />
-              <div class="movies-close-btn" onclick="removeMovieCard(this)">
-                <img src="./assets/images/icons/close.svg" alt="" />
+        <div class="max-screen-width">
+          <div class="movies-topbar">
+            <p class="topbar-title">Collect your favorites</p>
+            <div class="search-box">
+              <img
+                src="./assets/images/icons/search.svg"
+                alt=""
+                class="search-icon"
+              />
+              <div class="search-bar">
+                <form action="">
+                  <input
+                    type="text"
+                    placeholder="Search title and add to grid"
+                  />
+                </form>
               </div>
             </div>
-            <div class="movies-info">
-              <p class="movies-title">Batman Returns</p>
-              <p class="movies-desc">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut…
-              </p>
-            </div>
           </div>
-          <div class="movies-card">
-            <div class="movies-image-holder">
-              <img src="./assets/images/movies/2.png" alt="" />
-              <div class="movies-close-btn" onclick="removeMovieCard(this)">
-                <img src="./assets/images/icons/close.svg" alt="" />
+          <div class="movies-card-holder">
+            <div class="movies-card">
+              <div class="movies-image-holder">
+                <img src="./assets/images/movies/1.png" alt="" />
+                <div class="movies-close-btn" onclick="removeMovieCard(this)">
+                  <img src="./assets/images/icons/close.svg" alt="" />
+                </div>
+              </div>
+              <div class="movies-info">
+                <p class="movies-title">Batman Returns</p>
+                <p class="movies-desc">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut…
+                </p>
               </div>
             </div>
-            <div class="movies-info">
-              <p class="movies-title">Wild Wild West</p>
-              <p class="movies-desc">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut…
-              </p>
-            </div>
-          </div>
-          <div class="movies-card">
-            <div class="movies-image-holder">
-              <img src="./assets/images/movies/3.png" alt="" />
-              <div class="movies-close-btn" onclick="removeMovieCard(this)">
-                <img src="./assets/images/icons/close.svg" alt="" />
+            <div class="movies-card">
+              <div class="movies-image-holder">
+                <img src="./assets/images/movies/2.png" alt="" />
+                <div class="movies-close-btn" onclick="removeMovieCard(this)">
+                  <img src="./assets/images/icons/close.svg" alt="" />
+                </div>
+              </div>
+              <div class="movies-info">
+                <p class="movies-title">Wild Wild West</p>
+                <p class="movies-desc">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut…
+                </p>
               </div>
             </div>
-            <div class="movies-info">
-              <p class="movies-title">The Amazing Spiderman</p>
-              <p class="movies-desc">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt ut…
-              </p>
+            <div class="movies-card">
+              <div class="movies-image-holder">
+                <img src="./assets/images/movies/3.png" alt="" />
+                <div class="movies-close-btn" onclick="removeMovieCard(this)">
+                  <img src="./assets/images/icons/close.svg" alt="" />
+                </div>
+              </div>
+              <div class="movies-info">
+                <p class="movies-title">The Amazing Spiderman</p>
+                <p class="movies-desc">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
+                  diam nonumy eirmod tempor invidunt ut…
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -107,11 +114,93 @@
 
       <!-- Contact Section -->
       <div class="contact-holder">
-        <div class="contact-topbar">
-          <p class="contact-title">How to reach us</p>
-          <p class="contact-desc">Lorem ipsum dolor sit amet.</p>
+        <div class="max-screen-width">
+          <div class="contact-topbar">
+            <p class="contact-title">How to reach us</p>
+            <p class="contact-desc">Lorem ipsum dolor sit amet.</p>
+          </div>
+          <div class="contact-secondbar">
+            <div class="contact-form">
+              <span class="contact-form-input-box-top contact-form-input-box">
+                <span>
+                  <label for="" class="contact-form-label">Full Name *</label>
+                  <input class="contact-form-input" type="text" />
+                </span>
+                <span>
+                  <label for="" class="contact-form-label">Last Name *</label>
+                  <input class="contact-form-input" type="text" />
+                </span>
+              </span>
+              <span class="contact-form-input-box">
+                <label for="" class="contact-form-label">Email *</label>
+                <input class="contact-form-input" type="text" />
+              </span>
+              <span class="contact-form-input-box">
+                <label for="" class="contact-form-label">Telephone</label>
+                <input class="contact-form-input" type="text" />
+              </span>
+              <span class="contact-form-input-box">
+                <label for="" class="contact-form-label">Message</label>
+                <textarea class="contact-form-input"></textarea>
+                <p class="contact-form-label">*required fields</p>
+              </span>
+              <span class="contact-form-check-box">
+                <input type="checkbox" id="checkbox" />
+                <span class="check-mark"></span>
+                <label for="checkbox" class="contact-form-label">
+                  I agree to the
+                  <span class="text-white">Terms & Conditions</span></label
+                >
+              </span>
+              <span class="contact-form-button-box">
+                <input class="contact-button" type="submit" value="submit" />
+              </span>
+            </div>
+            <div class="contact-map">
+              <div class="mapouter">
+                <div class="gmap_canvas">
+                  <iframe
+                    class="gmap_iframe"
+                    width="100%"
+                    frameborder="0"
+                    scrolling="no"
+                    marginheight="0"
+                    marginwidth="0"
+                    src="https://maps.google.com/maps?width=600&amp;height=600&amp;hl=en&amp;q=eBEYONDS eBusiness & Digital Solutions&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
+                  ></iframe>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
+      <!-- Footer Section -->
+      <footer class="footer">
+        <div class="max-screen-width">
+          <div class="footer-top-box">
+            <div class="footer-address-box">
+              <p><b>IT Group</b></p>
+              <p>C. Salvador de Madariaga, 1</p>
+              <p>28027 Madrid</p>
+              <p>Spain</p>
+            </div>
+            <div class="footer-icon-box">
+              <p>Follow us on</p>
+              <img src="./assets/images/icons/twitter.svg" alt="" />
+              <img src="./assets/images/icons/youtube.svg" alt="" />
+            </div>
+          </div>
+          <div class="footer-bottom-box">
+            <span>Copyright © 2022 IT Hotels. All rights reserved.</span>
+            <span
+              >Photos by Felix Mooneeram &
+              <span class="text-white">Serge Kutuzov</span> on
+              <span class="text-white">Unsplash</span></span
+            >
+          </div>
+        </div>
+      </footer>
     </main>
     <script src="./assets/js/script.js"></script>
   </body>
