--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="contact-form">
               <span class="contact-form-input-box-top contact-form-input-box">
                 <span>
-                  <label for="" class="contact-form-label">Full Name *</label>
+                  <label for="" class="contact-form-label">First Name *</label>
                   <input class="contact-form-input" type="text" />
                 </span>
                 <span>
