Added movie search function

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="auto">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movie Library</title>
     <!-- Style Sheet -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
     <!-- Side Bar Menu -->
@@ -51,7 +53,9 @@
       <div class="navbar-top">
         <div class="navbar max-screen-width">
           <div class="logo">
-            <img src="./assets/images/logo/Logo.svg" alt="Logo" />
+            <a href="#" aria-label="Home"
+              ><img src="./assets/images/logo/Logo.svg" alt="Logo"
+            /></a>
           </div>
           <nav>
             <a aria-label="Home" href="#"><p class="active">Home</p></a>
@@ -61,12 +65,11 @@
             <a aria-label="Location & Contact" href="#"
               ><p>Location & Contact</p></a
             >
-            <a aria-label="Burger Menu" href="#"
-              ><img
-                onclick="toggleSideMenu()"
-                src="./assets/images/icons/burger_menu.svg"
-                alt="Burger Menu"
-            /></a>
+            <img
+              onclick="toggleSideMenu()"
+              src="./assets/images/icons/burger_menu.svg"
+              alt="Burger Menu"
+            />
           </nav>
         </div>
       </div>
@@ -88,7 +91,7 @@
       </div>
 
       <!-- Movies Section -->
-      <div class="movies-holder">
+      <div class="movies-holder" onchange="resultWidthSetter()">
         <div class="max-screen-width">
           <div class="movies-topbar">
             <h3 class="topbar-title">Collect your favorites</h3>
@@ -103,13 +106,30 @@
                   <input
                     type="text"
                     placeholder="Search title and add to grid"
+                    onkeypress="onSearch(this.value)"
                   />
                 </form>
               </div>
             </div>
           </div>
-          <div class="movies-card-holder">
-            <div class="movies-card">
+          <div class="movies-result-box" id="movies-result-box">
+            <p class="result-item">
+              Lorem, ipsum dolor. Lorem ipsum dolor sit amet consectetur
+              adipisicing elit. Nesciunt quisquam illo, a cumque atque
+              temporibus eum illum voluptatibus architecto eligendi aut! Eaque
+              iste molestiae expedita repellat accusamus aliquam aliquid
+              ducimus.
+            </p>
+            <p class="result-item">Lorem, ipsum dolor.</p>
+            <p class="result-item">Lorem, ipsum dolor.</p>
+            <p class="result-item">Lorem, ipsum dolor.</p>
+          </div>
+          <div class="movies-card-holder" id="movies-card-holder">
+            <div
+              data-aos="fade-up"
+              data-aos-duration="2000"
+              class="movies-card"
+            >
               <div class="movies-image-holder">
                 <img src="./assets/images/movies/1.png" alt="Movie Banner" />
                 <div class="movies-close-btn" onclick="removeMovieCard(this)">
@@ -119,12 +139,18 @@
               <div class="movies-info">
                 <h6 class="movies-title">Batman Returns</h6>
                 <p class="movies-desc">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut…
+                  The evil Penguin wants to take control of Gotham City and uses
+                  Max Shreck to reach his goal. Meanwhile, Batman does
+                  everything in his power to stop the Penguin while Catwoman has
+                  an agenda of her own.
                 </p>
               </div>
             </div>
-            <div class="movies-card">
+            <div
+              data-aos="fade-up"
+              data-aos-duration="2000"
+              class="movies-card"
+            >
               <div class="movies-image-holder">
                 <img src="./assets/images/movies/2.png" alt="Movie Banner" />
                 <div class="movies-close-btn" onclick="removeMovieCard(this)">
@@ -134,12 +160,18 @@
               <div class="movies-info">
                 <h6 class="movies-title">Wild Wild West</h6>
                 <p class="movies-desc">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut…
+                  Special Agent Jim West and inventive US Marshal Artemus Gordon
+                  are ordered by President Ulysses Grant to team up to save the
+                  world from Dr Arliss Loveless's enormous steam-powered
+                  tarantula.
                 </p>
               </div>
             </div>
-            <div class="movies-card">
+            <div
+              data-aos="fade-up"
+              data-aos-duration="2000"
+              class="movies-card"
+            >
               <div class="movies-image-holder">
                 <img src="./assets/images/movies/3.png" alt="Movie Banner" />
                 <div class="movies-close-btn" onclick="removeMovieCard(this)">
@@ -149,8 +181,9 @@
               <div class="movies-info">
                 <h6 class="movies-title">The Amazing Spiderman</h6>
                 <p class="movies-desc">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut…
+                  Peter Parker, an outcast high school student, gets bitten by a
+                  radioactive spider and attains superpowers. While unraveling
+                  his parents' disappearance, he must fight against the Lizard.
                 </p>
               </div>
             </div>
@@ -166,73 +199,88 @@
             <p class="contact-desc">Lorem ipsum dolor sit amet.</p>
           </div>
           <div class="contact-secondbar">
-            <div class="contact-form">
-              <span class="contact-form-input-box-top contact-form-input-box">
-                <span>
-                  <label for="first_name" class="contact-form-label"
-                    >First Name *</label
-                  >
+            <div
+              data-aos="zoom-in"
+              data-aos-duration="1500"
+              class="contact-form"
+            >
+              <form method="get" action="">
+                <span class="contact-form-input-box-top contact-form-input-box">
+                  <span>
+                    <label for="first_name" class="contact-form-label"
+                      >First Name *</label
+                    >
+                    <input
+                      id="first_name"
+                      name="first_name"
+                      class="contact-form-input"
+                      type="text"
+                      required
+                    />
+                  </span>
+                  <span>
+                    <label for="last_name" class="contact-form-label"
+                      >Last Name *</label
+                    >
+                    <input
+                      id="last_name"
+                      name="last_name"
+                      class="contact-form-input"
+                      type="text"
+                      required
+                    />
+                  </span>
+                </span>
+                <span class="contact-form-input-box">
+                  <label for="email" class="contact-form-label">Email *</label>
                   <input
-                    id="first_name"
-                    name="first_name"
+                    id="email"
+                    name="email"
                     class="contact-form-input"
-                    type="text"
+                    type="email"
+                    required
                   />
                 </span>
-                <span>
-                  <label for="last_name" class="contact-form-label"
-                    >Last Name *</label
+                <span class="contact-form-input-box">
+                  <label for="telephone" class="contact-form-label"
+                    >Telephone</label
                   >
                   <input
-                    id="last_name"
-                    name="last_name"
+                    name="telephone"
+                    id="telephone"
                     class="contact-form-input"
-                    type="text"
+                    type="tel"
                   />
                 </span>
-              </span>
-              <span class="contact-form-input-box">
-                <label for="email" class="contact-form-label">Email *</label>
-                <input
-                  id="email"
-                  name="email"
-                  class="contact-form-input"
-                  type="email"
-                />
-              </span>
-              <span class="contact-form-input-box">
-                <label for="telephone" class="contact-form-label"
-                  >Telephone</label
-                >
-                <input
-                  name="telephone"
-                  id="telephone"
-                  class="contact-form-input"
-                  type="text"
-                />
-              </span>
-              <span class="contact-form-input-box">
-                <label for="message" class="contact-form-label">Message</label>
-                <textarea
-                  id="message"
-                  name="message"
-                  class="contact-form-input"
-                ></textarea>
-                <p class="contact-form-label">*required fields</p>
-              </span>
-              <span class="contact-form-check-box">
-                <input type="checkbox" id="checkbox" name="checkbox" />
-                <span class="check-mark"></span>
-                <label for="checkbox" class="contact-form-label">
-                  I agree to the
-                  <span class="text-white">Terms & Conditions</span></label
-                >
-              </span>
-              <span class="contact-form-button-box">
-                <input class="contact-button" type="submit" value="submit" />
-              </span>
+                <span class="contact-form-input-box">
+                  <label for="message" class="contact-form-label"
+                    >Message</label
+                  >
+                  <textarea
+                    id="message"
+                    name="message"
+                    class="contact-form-input"
+                  ></textarea>
+                  <p class="contact-form-label">*required fields</p>
+                </span>
+                <span class="contact-form-check-box">
+                  <input type="checkbox" id="checkbox" name="checkbox" />
+                  <span class="check-mark"></span>
+                  <label for="checkbox" class="contact-form-label">
+                    I agree to the
+                    <span class="text-white">Terms & Conditions</span></label
+                  >
+                </span>
+                <span class="contact-form-button-box">
+                  <input class="contact-button" type="submit" value="submit" />
+                </span>
+              </form>
             </div>
-            <div class="contact-map">
+            <div
+              data-aos="zoom-in"
+              data-aos-duration="1500"
+              class="contact-map"
+            >
               <div class="mapouter">
                 <div class="gmap_canvas">
                   <iframe
@@ -280,5 +328,10 @@
       </footer>
     </main>
     <script src="./assets/js/script.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
