Search on mobile fixed.

--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
                   <input
                     type="text"
                     placeholder="Search title and add to grid"
-                    onkeypress="onSearch(this.value)"
-                    onchange="onSearch(this.value)"
+                    onkeydown="onSearch(this.value)"
                   />
                 </form>
               </div>
